--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
 	<title>d3v4 CampSND</title>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<style>
+		.chart {
+			background: lightgray;
+			border: 1px solid black;
+			width: 425px;
+			height: 625px;
+		}
+	</style>
 </head>
 <body>
-
-
+	<div class="chart"></div>
 	<script src="js/app.js"></script>
 </body>
 </html>
